added shuffler with option -r